--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ enum34==1.1.6
 Flask==1.0.2
 google-api-core==1.10.0
 google-auth==1.6.3
+google-cloud==0.34.0
 google-cloud-monitoring==0.31.1
 googleapis-common-protos==1.5.10
 grpcio==1.20.1
