--- a/app3.yaml
+++ b/app3.yaml
@@ -2,4 +2,4 @@ runtime: python37
 entrypoint: gunicorn -b :$PORT main:app
 
 env_variables:
-  GOOGLE_APPLICATION_CREDENTIALS: 'stackathon-2019-1dabc3d38149.json'
+  GOOGLE_APPLICATION_CREDENTIALS: 'stackybird-6bd89869b28b.json'
