--- a/app3.yaml
+++ b/app3.yaml
@@ -1,5 +1,5 @@
 runtime: python37
-entrypoint: gunicorn -b :$PORT main:app
+# entrypoint: gunicorn -b :$PORT main:app
 
 env_variables:
   GOOGLE_APPLICATION_CREDENTIALS: 'stackybird-6bd89869b28b.json'
